--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>罗彬航 - 博客</title>
-</head>
-<body>
-<h1 style='text-align: center'>这是罗彬航的博客，准备开始！</h1>
-</body>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>阿西的Blog</title>
+    <meta name="description" content="每天学习一点点~">
+    <link rel="icon" href="/favicon.ico">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#3eaf7c">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    
+    <link rel="preload" href="/assets/css/0.styles.eb21f369.css" as="style"><link rel="preload" href="/assets/js/app.7479ab8f.js" as="script"><link rel="preload" href="/assets/js/11.77fe945e.js" as="script"><link rel="prefetch" href="/assets/js/10.20e3d77c.js"><link rel="prefetch" href="/assets/js/12.acaa6993.js"><link rel="prefetch" href="/assets/js/13.1330ca5b.js"><link rel="prefetch" href="/assets/js/14.2c09b63f.js"><link rel="prefetch" href="/assets/js/15.e717ef19.js"><link rel="prefetch" href="/assets/js/16.9b7eda61.js"><link rel="prefetch" href="/assets/js/3.bd1c981c.js"><link rel="prefetch" href="/assets/js/4.02c7030f.js"><link rel="prefetch" href="/assets/js/5.bf8bde4b.js"><link rel="prefetch" href="/assets/js/6.6c736564.js"><link rel="prefetch" href="/assets/js/7.4c90426f.js"><link rel="prefetch" href="/assets/js/8.3ac98bec.js"><link rel="prefetch" href="/assets/js/9.1ebd3a9e.js"><link rel="prefetch" href="/assets/js/vendors~notification.bf87d155.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.eb21f369.css">
+  </head>
+  <body>
+    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">阿西的Blog</span></a> <div class="links" style="max-width:nullpx;"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <!----></div></header> <div class="sidebar-mask"></div> <div class="sidebar"><!---->  <!----> </div> <div class="home"><div class="hero"><img src="/header.png" alt="hero"> <h1>阿西的Blog</h1> <p class="description">
+      每天学习一点点~
+    </p> <p class="action"><a href="/home/" class="nav-link action-button">Get Started →</a></p></div> <!----> <div class="content custom"><div class="features"><div class="feature"><h2>知识汇总</h2> <p>常用知识，方便查看</p></div> <div class="feature"><h2>有趣的事</h2> <p>代码优化、开发小技巧、规范</p></div> <div class="feature"><h2>踩到的坑</h2> <p>开发过程中遇到的问题，以及解决方案</p></div></div> <div class="tip custom-block"><p class="custom-block-title">(๑•̀ㅂ•́)و✧</p> <p>在学习中寻找快乐~</p></div></div> <!----></div> <!----></div></div>
+    <script src="/assets/js/app.7479ab8f.js" defer></script><script src="/assets/js/11.77fe945e.js" defer></script>
+  </body>
 </html>
